# my-zt-tui

./: .env.example  README.md  pyproject.toml  zt.http
src/my_zt/: entry_points.py  my_app.py  my_utils.py
src/my_zt/css/: ui.css
tests/: test_utils.py
